## Process this with automake to create Makefile.in
 
AUTOMAKE_OPTIONS = foreign
 
EXTRA_DIST = \
		About.cpp\
		About.h\
		AdvancedSettings.cpp\
		AdvancedSettings.h\
		BasicSettings.cpp\
		BasicSettings.h\
		Config.cpp\
		Config.h\
		dsp.h\
		EditMetadata.cpp\
		EditMetadata.h\
		frontend.h\
		icon2.ico\
		liboddcast.h\
		live_off.bmp\
		live_on.bmp\
		liverec.psd\
		log.cpp\
		log.h\
		MainWindow.cpp\
		MainWindow.h\
		oddcastv3.clw\
		oddcastv3.dsw\
		oddcastv3_foobar.cpp\
		oddcastv3_foobar.dsp\
		oddcastv3_foobar.nsi\
		oddcastv3.h\
		oddcastv3.rc\
		oddcastv3_winamp.cpp\
		oddcastv3_winamp.dsp\
		oddcastv3_winamp.h\
		oddcastv3_winamp.nsi\
		oddsock_logo.bmp\
		oddsock_logo.psd\
		resample.c\
		resample.h\
		resource.h\
		resource.hm\
		StdAfx.h\
		YPSettings.cpp\
		Socket.h\
		YPSettings.h

LIBS = @LIBS@ @VORBIS_LIBS@ @LAME_LIBS@ @JACK_LIBS@ @FAAC_LIBS@ @LIBFLAC_LIBS@
CXXFLAGS = -g @CXXFLAGS@  @FAAC_CFLAGS@ @VORBIS_CFLAGS@ @LAME_CFLAGS@ @LIBFLAC_CFLAGS@
CFLAGS = -g @CXXFLAGS@ @FAAC_CFLAGS@ @VORBIS_CFLAGS@ @LAME_CFLAGS@ @LIBFLAC_CFLAGS@

INCLUDES = 
